# ChangeLog for dev-db/couchdb
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/couchdb/ChangeLog,v 1.88 2014/02/02 10:31:24 swift Exp $

  02 Feb 2014; Sven Vermeulen <swift@gentoo.org> couchdb-1.4.0.ebuild,
  couchdb-1.5.0.ebuild:
  Fix bug #499284 - USE=selinux depend on couchdb policy

  24 Dec 2013; Agostino Sarubbo <ago@gentoo.org> couchdb-1.4.0.ebuild:
  Stable for x86, wrt bug #490826

  22 Dec 2013; Pacho Ramos <pacho@gentoo.org> couchdb-1.4.0.ebuild:
  amd64 stable, bug #490826

  21 Dec 2013; Agostino Sarubbo <ago@gentoo.org> couchdb-1.4.0.ebuild:
  Stable for ppc, wrt bug #490826

*couchdb-1.5.0 (09 Nov 2013)

  09 Nov 2013; Dirkjan Ochtman <djc@gentoo.org> +couchdb-1.5.0.ebuild:
  Version bump couchdb to 1.5.0.

  14 Sep 2013; Agostino Sarubbo <ago@gentoo.org> couchdb-1.3.1.ebuild:
  Stable for x86, wrt bug #484304

  12 Sep 2013; Agostino Sarubbo <ago@gentoo.org> couchdb-1.3.1.ebuild:
  Stable for ppc, wrt bug #484304

  10 Sep 2013; Agostino Sarubbo <ago@gentoo.org> couchdb-1.3.1.ebuild:
  Stable for amd64, wrt bug #484304

*couchdb-1.4.0 (09 Sep 2013)

  09 Sep 2013; Dirkjan Ochtman <djc@gentoo.org> +couchdb-1.4.0.ebuild:
  Version bump couchdb to 1.4.0.

  09 Sep 2013; Dirkjan Ochtman <djc@gentoo.org> -couchdb-1.2.1.ebuild,
  -couchdb-1.3.0.ebuild:
  Remove old versions.

*couchdb-1.3.1 (28 Jun 2013)

  28 Jun 2013; Dirkjan Ochtman <djc@gentoo.org> +couchdb-1.3.1.ebuild:
  Version bump couchdb to 1.3.1.

  25 Jun 2013; Agostino Sarubbo <ago@gentoo.org> couchdb-1.3.0-r1.ebuild:
  Stable for amd64, wrt bug #473562

  25 Jun 2013; Agostino Sarubbo <ago@gentoo.org> couchdb-1.3.0-r1.ebuild:
  Stable for x86, wrt bug #473562

  24 Jun 2013; Agostino Sarubbo <ago@gentoo.org> couchdb-1.3.0-r1.ebuild:
  Stable for ppc, wrt bug #473562

  28 May 2013; Dirkjan Ochtman <djc@gentoo.org> couchdb-1.2.1.ebuild,
  couchdb-1.3.0-r1.ebuild, couchdb-1.3.0.ebuild: