@@ -7,30 +7,26 @@ AUX couchdb.init-0.10 1176 SHA256 8e3dcdd68702927da09aec2f730ee7ce98a442095279cc
 AUX couchdb.init-2 1150 SHA256 256731f0a077be54a7f89072673742bb3b7b56539e9e31c5efb91d076540f7bd SHA512 236f1e171776420797fbb74a1b8c8d8865de2638ddb901017d4ebc362d4c794f75a1a26bbbfc3ecf7253e7f834324403d99977a514ff9fea4a61d9c10bc92fe7 WHIRLPOOL c489daf7f94d614b13c2fed7cafc559a67a1af79cec06a117826ba58dd23f64697e8e1a6476cdeb3767421a4dcb9720ead78bac14e41f46b8336d69910c259cc
 AUX couchdb.init-3 434 SHA256 41302b877863f8b32f68bdf55b43e6968a924fa7b6d02d97d39bc6edc56ef4fb SHA512 cbc200c2374acde0b2ddfdea19b6383f5467949f75a74aec02b7661cb7bf6ec966ee42e49b317fa5dfd6610f2cf9752fafeaa9d31aabeff2805f1cc4fbefba3c WHIRLPOOL 1ee6c3905913a8cad27ad839dd8026b81fc8541b6c08e714347faadeee65bebb140ce1cda4d869efe330fb83dffab9984409f51d8a43ad540478ddf9017796d3
 AUX couchdb.init-4 438 SHA256 7f191b22d82b5e430b0c1d29a7e9e791a69a0867e96d2a643e2bf45e2f251060 SHA512 922ff66130819de9dac5d8df45b685f05287756f235a989e1b8179a4c54d8769f3e189b7797fbc03db5828b50c49f87ebd1a74cdf045027c5aed99a627753cb7 WHIRLPOOL 01528de2fa13e6eeb09465b4824cbb8c846e4fe67857b93501b15b4994c8db70eae539c7566a3c7380392f241906e60e02d0cab2a798852001cac93d5f765902
-DIST apache-couchdb-1.3.0.tar.gz 3420515 SHA256 591a2a5b92941cee1bba1e16e5a4978df8a81079a8b2efa766c36540b66a37f7 SHA512 8e44fd9e585abf50e3a0ddeb76a2f4045c881b3097114d0ed2356466d6b00ea78cd6fd57c5cf3ffb17ddeccdc53d0ab060047b442f4e9f9e1daece11372dd46f WHIRLPOOL 0c42a27e045a5b7fcb0b9217bf1ec5a1ee51f6b87663220deb015fb1047e9d67bda421bf5ffeb9c548225e29cf2512607b3dc2d39661d6da106f29c8e80800df
-DIST apache-couchdb-1.3.1.tar.gz 3381522 SHA256 e3051cb0be560513e0cb2d4fcb03a4cad4eda5bf381a115375d1067875ec8a6a SHA512 55134f090e036eb81a2176376c479172793c9f35377fb171788a5ee8b2d093446c375bda861ed642f6a6d0e5cdc405b0f00453d5086f174646b21c85327e5413 WHIRLPOOL 106ae37f405802344ade5168bae42b293a003dd36b088f692657eb661671e96c8892e9689c422b6601633226b69e8a72df2b070138934244c8ea0a2ed4f57457
 DIST apache-couchdb-1.4.0.tar.gz 3422107 SHA256 bdbb9c35c2738ae0fe63280bd818a50443253f3db2184f8b9c386e5615ae02b5 SHA512 558009ec11befbb8b18541f19d3e31b1321e4c6413b66c7142bf67cd40feea33a3c32347a91ab3bf30cdd455931831794c6dd21085fff9370e3317780279c877 WHIRLPOOL 517fe6d14b1fd8e83c9b9e75b3c85c1730defe03f51f5ce6edb0138460f02bd6002509209d1cc0186d021f2c8b307b320814dbe82965e7271a472cce4671ed7c
 DIST apache-couchdb-1.5.0.tar.gz 11594978 SHA256 abbdb2a6433124a4a4b902856f6a8a070d53bf7a55faa7aa8b6feb7127638fef SHA512 557f712cf927b8713285e716a9dce624960316af0c481c98553c12b310fc228d30b585d25bf2c3e3debde5b25fc3d94dbbedaf79a7ae480e92a847abff73c2de WHIRLPOOL cecc476c7266623a823d4b2aa1641f9b15c43ac012859483fc97f0aae6ec7afcd716baa27aac455d0eafbe80b042ce0329327a72e3df90af1eb920e70e870d86
-EBUILD couchdb-1.3.0-r1.ebuild 1709 SHA256 87da5272e1a520731d9d52dc7f937404af8964377549cb2f12f44b3db47a382a SHA512 25c4a22711995f693f541f86a1f4e3754df5853b895c03b0d3e4bdc4e7df7e644510bc498c5d5c7971c11293bedd8c2009100bfd86b8a3722e7b0f489020939a WHIRLPOOL 4d18ef73d918ee346090745f3aec5df40d957350e22e5b96e343ec83cc5d47c162d83e7c5a597fdf5553709272d1c53bf4ae93030d0b3bbc49f5f75a7d9f93ef
-EBUILD couchdb-1.3.1.ebuild 1724 SHA256 595abe2c0109f2dc3cec5ee29668d406b32e41701ecd9b65e3288fe7f107c042 SHA512 d8e9fa31407817d860b57e0b21c965d85122b3afd5872fb493fbc3b81da0c8f198e026ea70c7615d08ff59c702a6e629f4e0db836283fc2c6194d09785e1f2d6 WHIRLPOOL 2e0da2fc02ae07b04564adac772d8712fcc20e893cee522053c44bdb939b377a026bc4ae073d01a809589f0efe71e46b8463ae893692ba0fc4bc6a3ebfe93b2f
 EBUILD couchdb-1.4.0.ebuild 1772 SHA256 ad1d8e32b872cd8cce019c04ba3310f0376a9c035fb5177d9b888813f927ce83 SHA512 77a977a203af130a4f5ae5021a82ee480da4d6989d1a9eadf65a99469cc5c8ca6395861890c1d0aa12bf7d9aebf84621ce5a2eeaf98deb524077fe28f19f927d WHIRLPOOL 0af45204f0cb8f5ae34c2a09f60d86e170dbdbedd71592f44471230a9dae9b8e647987ef0ba3e4af98e52028242bc4758f4b56ec758641dbfde41cf5f9064509
 EBUILD couchdb-1.5.0.ebuild 1775 SHA256 51f04d2e14192baf8187cef9cd01f838ceb20a68b057a8a626494b0e7453d47f SHA512 5c9a6cc11b7d2db8508f960c490a2e333fc0229ece2f39c90af7de9a5adc6bd5b2756755f210e46aac5412c84f9443b414fb69d729926ad1616fd65342197504 WHIRLPOOL 374bde1dc3fae0bf1368b6272bdbe4047a9e1ecd61efbf2edf970ad716f20f81672233c67952d4a34fa2bf9f0b4069b88f74eb8fc408da156a559125c7ce77c7
-MISC ChangeLog 11528 SHA256 373e22b76045094b334b659a72c8e534eaa48ec5188d5b97d90bb717315490d6 SHA512 cd7f672a7379cfed9373bb6bddce7c5b3d012e812900c848869b8fc0e25e4c1a02fa373a2359d7688fa392447dace7345f5759ccc70fd4ed61166d0376bcd620 WHIRLPOOL f40c96f9f1cc5f17c9910a6b997a0eefb494a45b0f93521cd5c821ec3cee589a84714e0ff95601dbe1b2d0a50d83276cb80381fbd8a25b59e8b95b975004c40c
+MISC ChangeLog 11651 SHA256 28a56dbf801e8c8719c3d88df2fd7b3d3ff1b88f866e530f40db3ce133159fb6 SHA512 5dffe01c4fe22f9f58101aa5630973c60e84855f629fe0522ddc025ff9ce180cc33ca2a6d9fdfbc9be04b93c4ec3f25484d6f8676b3a2d8259f11ee9b9b4957a WHIRLPOOL 110ae2885e2e118dc6ff82ab15b8eec8dec860f056da8044846b291fec63ce2f218ff81836176268b82b7e45dac97a7b5e0c3f80d1fbb305e6e1b9977fe578b9
 MISC metadata.xml 198 SHA256 5caca51bb42a27d79fe99901fc0331653e71cb0a40baa1c387b9d3fc99e007a8 SHA512 ce42b56d5a9225aa9cbf7ddc4f92285df0ceb9eadf9befe0787837f40c6f86dce0b3a9de2b29e14a6c224ce25e6038d7e1bfe5e56ebedd2cb5be87fc9a216d89 WHIRLPOOL 9ce3e5ec80ac4302b609914f7a821fba1bbcead615d535c0d17b9b1e37892c4a9b2cbcbe6a46406e99bb3eb4f5b634277913b34f1f1b3b39d2d51e2c2dcda24e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJS7h5KAAoJEC7dUkA7aK9H1+MP/2YZrcqnLpdEUtGtELVhK3yb
-C0NiIuzpWTa7IvanviHpwNmcP8q7eYSOnVwiwbT32CzyGgxfIM9xDA9ivO+gLFto
-kgiqAnaTw7RocwpoeKqR0L6mO0D/h7o2LQWUvMwZP3J+uHr7XIFVe1tpMOP2KVHy
-rboKAq1pr/NJEUCLeFpTcfnnMyCqcFcdeEcC+2z0fbh3gGjngxeZHLRH2ti7CmMk
-FVgQDoh6mppUx0zLdAIchg3kD8P5gH2DQPOI7tLWtrlAmro6yOqaRXNjBgsD0zqb
-Qin+xiyRAOrB6KudrKcedUOjXtmtZtzANyc3bqxJomGnDWpbr+v4P24Osh66Yk2k
-ci9a1UVHh7DjdpWLJjzrKYvwrUgWpuE0aeoiPNwEQUnLOnitGuf8YSAMmn+ikaKJ
-wj8Im10YdM3jwsADpx6c7vALmZb4cdzYyETQSnYumJYvuApwyrulJHLNvOtqR2OA
-QvnlNcfoS+AfVHvnPYRwvNHn/gNsIQHa0tsyr/WUrpvqYbi24KJ4IU6n5ZwJQD5P
-g6WS8VSJ7WiQIlNzWE49fi9jy1h89l4ERRfuOAvkSNyuSMOdSZ649Wr9AAyVsUkx
-hPq4jwGGKAUmH1TAycLKGs1mFENniiHj9LPtsKvqFekvDjKCE4StmKa042HFJxXJ
-F0u60EJjDg4RrAiJuPmc
-=NM2I
+iQIcBAEBCAAGBQJS9pvAAAoJEJ+WuSkwOAOBLy4QAJAqfDbe0t1ZXjELwspDHNKl
+lxJX2yYH9i0eie3WTIT0tbBV7IdIW40wQs6GiqrNf0ibMnSMT5cCFeg52rNKC4ey
+qD50v0Q/tdXC1wq+WSsh/0VK+ibcZ/9CiBYpVo/IPec1lftLGhIVZtJdGJFSuPZE
+mJvv9NFnWbJ+ApDTXvB3eNPCDx6hFIF7bHsSgj63raXVTsk3YAe8lW56BU8eOS1A
+BRQqYQ8yIt6CZYgxsr3D3pFopggxTRlhdvVF37LfIYVeyIJ+rmyh7ag1cuR0M2FE
+N37NFXcS5GqwysP/pMP02FViI7vj1gbQcVddYM9BS3+6CCHjp71WQcrykqZJOZPP
+F6v/QpUXTm6UJ4uClGl4p6d3anXmceRjwfm4RAMq1M2fQBgQO8Bo1o6HKE5KWLGj
+Qr5w/4m1Vj+WprOgKV7tpFmuIypQhzIR7Rr+CLgHzx1g7oWJo9LW/yxhKQbQkgKg
+0yJgfY3NaH1Q4D5u752H+KtAQFoBsNfKW5Di2jedHiacaX4GUphenPFSGA7lMAzv
+epsLluMoaLEF42VUvXZIhf8zYIcroC1vY1jAFgK1MQr8oqT/xtSfUmEckLYEywgt
+Z+bwGanvxa3laGzBdQNsiPheufEk8JJdrPuKbEVtNdo4Sg58yt509/sgKvZ6OVUo
+ehgdve+U+mOk3YAuVkIv
+=ZYyz
 -----END PGP SIGNATURE-----
