@@ -1,13 +1,0 @@
-DEFINED_PHASES=compile configure install prepare setup test
-DEPEND=>=dev-libs/icu-4.3.1 <dev-lang/erlang-16[ssl] >=dev-libs/openssl-0.9.8j:0 >=net-misc/curl-7.18.2 <dev-lang/spidermonkey-1.8.7
-DESCRIPTION=Apache CouchDB is a distributed, fault-tolerant and schema-free document-oriented database.
-EAPI=5
-HOMEPAGE=http://couchdb.apache.org/
-IUSE=test
-KEYWORDS=amd64 ppc x86
-LICENSE=Apache-2.0
-RDEPEND=>=dev-libs/icu-4.3.1 <dev-lang/erlang-16[ssl] >=dev-libs/openssl-0.9.8j:0 >=net-misc/curl-7.18.2 <dev-lang/spidermonkey-1.8.7
-SLOT=0
-SRC_URI=mirror://apache/couchdb/source/1.3.0/apache-couchdb-1.3.0.tar.gz
-_eclasses_=eutils	40081e8c7e7f7c4f9db349a1d6d52925	multilib	fac675dcccf94392371a6abee62d909f	pax-utils	2424f959506320f5196de8f79fa05297	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=87036275596190ddf3046c36587ac6d8
