@@ -3,7 +3,7 @@ AUX clvmd.rc-2.02.39 3684 SHA256 476289b24539eeff4ff94c34c129da755d8cff11f1e950b
 AUX device-mapper.conf-1.02.22-r3 15 SHA256 57777904f12a35617e5a4193c964ebb32396452487fd02353e71e16e7b46bc22 SHA512 1846e0ca1be7170d4c0beb694a23aea4d19b24b99a248bb0f4e034286a6beede0a8efc474b0c237e33ee72c86c93b6238f2d5ea23e224765acba99c90633261e WHIRLPOOL a0de185e849cd4d1aab9f145a6330f267ca547ba4ec7720be6f33e2c3c4c182b8674ea220b894f0fc806fe6637ba7bcabd739ca57b53b3efa5fad0cf1e57ba2e
 AUX device-mapper.rc-2.02.105-r2 3828 SHA256 036b6de05e6cbd921a667d6fc6b01d30c8f9b720e1a0d0e2453ecd62d32573fb SHA512 aa5c73a91a85069782384ab9ecec299d9f036ed8c069ebef66bbedfa9d9ce7c63baa70692148cf4f1b06d6b4e53fc1916ae576ecc005323154a25a686bef33fd WHIRLPOOL bebba4faf498d400c68b8e79a64c90f0b71a3df350895ea4b78efb802600f4179ec0b7507be7ca61bd7444ca8d5c8f8156112a2fa3083e51a6fe8f552db583ba
 AUX device-mapper.rc-2.02.95-r2 2765 SHA256 e0bff689040746480e2479d1ad57adb5ab23cc0415ab9a8356503aed7a14c658 SHA512 f6e653c6af92debe543bcb48ee36c2bfa0f1ad08d2dfe40455cf9d3b104a1f825a295b43de2a5fa64367c6c2eadb2b36004c7cf51fd3b15191ea6be21d0c5a4f WHIRLPOOL 298548daebf413ea8739c979c23b9ea7cfbcf12437debb8ce7d570b6a8269fbcd4d7b27816734f3728e2d591ef9658a4f4bb0c43299dbf408aeac10ef87e5bf0
-AUX dmeventd.initd-2.02.67-r1 685 SHA256 dbf81d357446fa555bcd75939af6d5982c10a8235800ddc299d2673b2c694d39 SHA512 0c0399987f7710bd29c5a8a02288927fae5fb54cb42918f2c96c67aae4beedc1c6e6b3f80546799696364c1c40cc03e2cbbede5042caeb519fc0532a0296b7ad WHIRLPOOL aaa0064fc5bcde09814e8ee3535d5348c5b1f0119ccbd961d6423a26fd1e1d654df3e0e1f9dea1725afe7f9e4fe8d1152b8653f6430ad23a7c47e36e61750a3d
+AUX dmeventd.initd-2.02.67-r1 683 SHA256 0c051388991ba69afbf2f6baf36ba227d7c26fc8f0d7588d8de76d9a74886d79 SHA512 523b54d63592c500394243632f4ed60838d04a8c386a85bb2a0fda6f756607467ec025c1490104d8c73035e37646eeea55dcafd3f05eab85e035bbedcebf0406 WHIRLPOOL 5dcf777e9c736eb4101649e5b0bbb43016c3b7ece77c1bb8afdda63b23b15a37257cdd29c05f82b0ae4f98405067c85a9a6ee8a35d98c4b5fb647ed015c11da7
 AUX dmtab 416 SHA256 e2e22bbe13fb97ec9a68659daa275b1d22fd0a3fd21e76b1f4bfba504a8bd7b5 SHA512 392b4bd85745bc774245195a1c416ae68efbe5f7b2498f6bfc40021cd2c9f6372fd1c3d346198c7749635b5d9b3f66ba1b963a2e144b4f522d87016ab4777de2 WHIRLPOOL f48c0fda382c7d57bad2ad4a8155189735236d13f24f39b3969736c3ad54d28f92c82174cae5c6775f8bc58506f19025f2cba6433f389c84505552fc8b4d3ed4
 AUX lvm-monitoring.initd-2.02.105-r2 1088 SHA256 d7655cadd3a3a9d3683a540413365310ca9503c38fd21a9bfccec40630ca72f1 SHA512 3c3f7ec1868e3634be3bb82689d30065dbe0fac3e2dfa22a14acb76c82b102022c280f995f82a1f7c91c905c0ba961bbb2707ddf60ad5fa9d717acdf942855d5 WHIRLPOOL 92e7eedf6add5cba645f74281912713928f694f18155db222352ba8e4a70ac89696f9db3cc2c9fc79fb9ff0f98cb176da8aedb1c5b7b47eecd4ee36360df41f0
 AUX lvm-monitoring.initd-2.02.67-r2 1183 SHA256 b89971a4f163e1a91df2416ff442cae7209f8343e6c8612eb3174ed8f5c5c788 SHA512 e99d8e0ed2f22e8f3f1e36581ce92bc2196dbebdeb7c301070c5f2e78079804de3ac782c732929e23a3a01536a270236513c849ec1574ff4c72045b8f69c98ed WHIRLPOOL 71eb7d1203bc2b6be22ebb0eb20e3d2e0786036bea9f0beda91c517f47b99374b52ca4c7d5cd76ae6338ddab187b68a7a371a437e5501996454e125e12e998a8
@@ -28,8 +28,8 @@ AUX lvm2-2.02.97-strict-aliasing.patch 3142 SHA256 a4c799777c8e5a83fe1af52ed623b
 AUX lvm2-2.02.97-udev-static.patch 1170 SHA256 a797b0d767c7df83653b9da996b47425ad1d0d6bd79371c231b8f6480a013f41 SHA512 7c45fcccd4cd5097e88bef014fdff0bfde3959c57cffb34657674c4f557b36f4df73a2f3a8af17a12c1b0f52e4b5d99806f6f82c5ae60417ebcbf72b82616c89 WHIRLPOOL 4f303960be89b5e37d3f700eeb6e534c40750a8a486c33f21605d53dabef487b5a00e2bcda42d3dcbe60ebba3e444cea8a2375901bd92b9047b040584c66faea
 AUX lvm2-2.02.99-example.conf.in.patch 1489 SHA256 55273a2bc6df33057f4efdd947b75f0282a7993acd5e57f0019f8ca57ca7df38 SHA512 0c92a0e454505219653500d4fb2ee57626bb30375782be941bda17d7b841cb05eeebb87bfc4f7aa397b26fb4908bcbd0f69d2c07e63bf4f070756a1894851869 WHIRLPOOL 3f6c94dd63fcf5e2d1406aa074aee27997fa6d58da3db9d22281b3080ec36277bc5225c3b62f042b38f5d0870fb1e3e19433f218f01e03323c7ad1210d45d4b3
 AUX lvm2-2.02.99-locale-muck.patch 395 SHA256 14e7c65fd9aa71b7f09cc1aecfaccb3048dbb09dd4eb4c342556708aa6adba77 SHA512 4014abbaeb1106dbaa360e2573340651adc0cccc6c0c05cc57695e74e7a3d0b5a73e2b72242bab0d0a10c2506a7c30c2a4de0275c0f81a14dfb068ec91492497 WHIRLPOOL 3383e94ca4dbaefd2c628d3a95b17a14602481c98425caf48f490185289eb3f1af2ef234ff5b5c431ea4624edd8e48764252bdf5b7159ab3bbbad699c3f936ab
-AUX lvmetad.initd-2.02.105 406 SHA256 b3e714c2fa3c88fe3bb7b24b0fcc34fb87e6bcc3f04a085776df6a12040a938e SHA512 3fffa45eef8931af4924b1235e66975338e692aa93afd0c6151053fefcd21f82e1e9107d73e77f2aac362907cd54959e0d29114990c6663d41a690d532249561 WHIRLPOOL 265c40714b2ce2c4595cf4faf5e89e8885fc39344c9d68d162d7db01d34c00bc59ba8291bdf030b225da8d8ee6931e5c666d0281121d0115c9124df8aec04485
-AUX lvmetad.initd-2.02.105-r2 409 SHA256 e8467f72e7599b091468dcde228a8b923a517f78fef701e691f2f76719bcba0e SHA512 0b475ea5a9d1280d1699a638f72e12b0ae86311d509a2f0a599d7e91d333c0d87352cd4105a95b9f6c305e358727d7d6a328a8ca3e634117d8428d51c7164d38 WHIRLPOOL 0ee305442ed63b735c86bb74c034be7a9b763b82f6393ac2233af92dd1a248e63a45c44fce0b192c1a844a2461cbef2ea373915bd6edb0439c79c212e674d859
+AUX lvmetad.initd-2.02.105 402 SHA256 22c0168e35f7180efa6d1c1b85b65e920be3af91b99f9c31f021ee85f55d49c5 SHA512 788c92d8b945cb37e3dd408c0cdcd922285368b475dd63f81cbc9d9dcfdb6c9d22bfdeba3450bd51359b2600209a4716a90d17c8f8c38a08069d32ae0cb7861f WHIRLPOOL 28109ad14ea4e9e975134a094202e121c6a87569c94c456f2c4c593e30a2511a2509872f2d2d8abc2e30d29c7ec6c92261ba51e0ca47ea590050839aecebc18a
+AUX lvmetad.initd-2.02.105-r2 405 SHA256 60accb4b6114753232f2db0adf3fc3f46d4459bfedf79b888801a13c55d79fa9 SHA512 d9c6f6c68a83b8f391ded7ebe900009a61ff06e92eb68ccb3dcdc8f41e61bbcdf47246e523ea8cfd6e71790376b316b219d4afaf66cf11477e2b54d526b74998 WHIRLPOOL d959d8c8b5f4ef84c26f8e585fe1761ef9bfd37f590e783e937679a863982e7cc4a4e320c3e2e3bd635dbd3486c15baf7c24e1a21325521f4320e643a57fb0e7
 DIST LVM2.2.02.103.tgz 1343887 SHA256 71c5a2e8842ed2f13f52e02b44eb183110a3410dedd1e117348e4eecc29d3c2a SHA512 1a9920947312e3e248bff7ff5d5eb54dec3f3b05eb3388fa92f95369b26ae8e6838186f87d817b09e8c635ddc3cdf51bc1d07c2a9d65fd7eab33598998bb7afe WHIRLPOOL de96dd8b7fb46ec777f34169759852ee5ef03ccdc93e110bf63c92dddb9cf4f805635444ceeead6b581610d2a23217d3b4729c286f016623f73b99c0b35a42a0
 DIST LVM2.2.02.104.tgz 1352953 SHA256 0d68b5a5d751a1e595f60ae55babbbf131ac3ace5dcfc7ac35a9eb85ee8647f5 SHA512 5071e1c7ae0a006ea93b72dbbe460037a7fb5a87f3fd4191118b04066bf60318a219c9bc63858d44d1b1cdd8cb7ecc295257585e9d24dd53a9b22f2b5bda16e9 WHIRLPOOL 183bc98dbb4f785d0276620ae8797b9fc8f0a50e0aab772c9e3bceeaf8af70325ff0088c029cb6e215a97e7f52f4a98143a1a7d4b2f5cfdea7834f5abc171558
 DIST LVM2.2.02.105.tgz 1374752 SHA256 d0700c7000ff6375c1c36cb2a89b97b9ae6757f4219fa9ec65f313d13d71e51e SHA512 fb2f4eaceb8e643c7e081b6d8d77daf387960c39f880f5600df40c7eb32d7908835114b8619805a814fc1c59ce920fa36d9afa72314dfabcb69ddf134833e1fa WHIRLPOOL b0dfea302e0afced489d96d14a04bddc48cfff540d26f69217787fe95b571d5600647162da84a95c6cb42e02fb83473a00257ab73e920b9a1b3c46f5ab12f02d
@@ -40,5 +40,5 @@ EBUILD lvm2-2.02.105-r1.ebuild 8236 SHA256 8f7abc8cc9d580e8c78261f2c3e57b4cbdc30
 EBUILD lvm2-2.02.105-r2.ebuild 8477 SHA256 43abc4ad75b66743e7a87854a177dfe476a2ec61219be3a8ac7fa777c2fd52bc SHA512 e51543dd1c01af08087ddad76a636c137ec86231a90c687ed7320f982c08c48862687dbc942df85374fe1674c144cd37dd6f28aa67e7a601f51fd9915d340af1 WHIRLPOOL f95b0a7d2606f511be22d7974db72fd67725e3eaabc94bdd729ab0dba289fa04c3d8a395acd412244c0246cc7ff87e6158f9190ce332bd44275d78281e1add70
 EBUILD lvm2-2.02.105.ebuild 7735 SHA256 deb2c1d1db4f69ce1a99a495ed94fbb8a99c99f5c186936655ad79a905c28f3a SHA512 e5818de3c6334a87d0706c2db70bd41ebdc8a9208766669e1f6dab625af05bb01584d92f25ab4ce71bdbc34cb85d34afd17fc14f6509fc29201536b5a7fc21a3 WHIRLPOOL 3572a6a375da4f88867deb65936e4045a6da5bbf4a443dd4d24f3453160f906a91b62aa4425b22602096ed9d3d6a23e0df940ce37c13f4e0274266717facf71b
 EBUILD lvm2-2.02.97-r1.ebuild 9081 SHA256 643e286908d2c5a040b325776bb889f8a924065c6a8679c8eac9a185eb698652 SHA512 49cf7c78644aa964d827aaa69a20db1998c312eeae4b64e95bd191ede106d3ffb699bdcc0be6025f088a88258eef7cfda76bd0f0a821825408a98c9bd3f6b7f1 WHIRLPOOL 46550b1891a9a3d6323c176844c3057d9980121547147b5a7289cdaa31dbb361c759221e60122a504ceefac86fb6c4515139327e6934331f7df76afb1d65e6b5
-MISC ChangeLog 66275 SHA256 38e335f70cc306c47035f36979d26bdb8da8f7fc4b5c60a74c4db40b31bdbf57 SHA512 a23de7ecc7f5959557ca94f5eb864675a85f86d27a6f3b1a294a2a86b5505c7f98f75f325c92919af06b3e2044009ed79152dbdfc679f52ae59a54ee218ff2ba WHIRLPOOL 1de539c551c8ad357c761ffbff3b59f51b96f772c32c6cd5049226e12c776880d2e5536c4369be9676e9c350f1ad246de43a161c88ad7875540038076a8991cf
+MISC ChangeLog 66488 SHA256 9b763ef24a96fba47c3ab85ab5c87c061e16aa9de79d022f793d808c0f60b07d SHA512 8a63e4aee4c8fc8ce9d60c647571dd89c1cf9d2bfd307a6dd9c7393a1a2d9f4a614582be293d3ae012d4b0eec66bfdca273a6bcb910665aac13ef8b5e903563a WHIRLPOOL e86e7a29cb7ef3b47fa6060b8143592bf2588dfd194404b049d20c52c56c1c2b11662f32484441dbb358b7e0c288b9ff206e14b20aeb30faec4a78efa6b6e25a
 MISC metadata.xml 995 SHA256 a2be36b695dab8ef65772af8d808cdc7a5c5855e2c9104060e7232e21b984216 SHA512 642abe2a196ffeaf3a67530befa8dc123f1e3e1238bf55d38c0affea82ab5b2f9e56da6b303410845c625494a59323ac8570f40e0f8a406db76295059958361a WHIRLPOOL cba3a6dd12fafc4719050082ee740d03ef0ed68e074b556a0c1f15f4a7b328d9b826d2b7ab3d3f19546de92e907a3fd466792db67423cb8630d5313154d5b6f2
