@@ -1,7 +1,10 @@
 #!/sbin/runscript
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/lvm2/files/dmeventd.initd-2.02.67-r1,v 1.2 2013/04/09 11:00:26 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/lvm2/files/dmeventd.initd-2.02.67-r1,v 1.3 2014/02/08 21:17:46 robbat2 Exp $
+
+PIDFILE=/run/dmeventd.pid
+BIN=/sbin/dmeventd
 
 depend() {
 	# As of .67-r1, we call ALL lvm start/stop scripts with --sysinit, that
@@ -11,13 +14,13 @@ depend() {
 
 start() {
 	ebegin "Starting dmeventd"
-	start-stop-daemon --start --exec /sbin/dmeventd --pidfile /var/run/dmeventd.pid
+	start-stop-daemon --start --exec $BIN --pidfile $PIDFILE
 	eend $?
 }
 
 stop() {
 	ebegin "Stopping dmeventd"
-	start-stop-daemon --stop --exec /sbin/dmeventd --pidfile /var/run/dmeventd.pid
+	start-stop-daemon --stop --exec $BIN --pidfile $PIDFILE
 	eend $?
 }
 
