@@ -1,9 +1,9 @@
 #!/sbin/runscript
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/lvm2/files/lvmetad.initd-2.02.105-r2,v 1.1 2014/02/02 19:56:52 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/lvm2/files/lvmetad.initd-2.02.105-r2,v 1.2 2014/02/08 21:17:46 robbat2 Exp $
 
-pidfile="/var/run/lvmetad.pid"
+pidfile="/run/lvmetad.pid"
 command="/sbin/lvmetad"
 command_args="${LVMETAD_OPTS:=-p ${pidfile}}"
 start_stop_daemon_args="--pidfile ${pidfile}"
